--- a/mulam/brahmavaivarta-puranam/ramacharitam.tex
+++ b/mulam/brahmavaivarta-puranam/ramacharitam.tex
@@ -56,7 +56,7 @@
 
 \twolineshloka
 {सा राममाशिषं कृत्वा प्रययौ भर्तृ मन्दिरम्}
-{शुभाशिषं ददौ तस्मै भार्या संप्राप्य गौतमः}% ॥९॥
+{शुभाशिषं ददौ तस्मै भार्या सम्प्राप्य गौतमः}% ॥९॥
 
 
 \twolineshloka
@@ -71,7 +71,7 @@
 
 \twolineshloka
 {राजा पुत्रं नृपं कर्तुमिषेय कृतसादरम्}
-{सप्ततीर्थोदकं तूर्णमानीय मुनिपुंगवान्}% ॥१२॥
+{सप्ततीर्थोदकं तूर्णमानीय मुनिपुङ्गवान्}% ॥१२॥
 
 
 \twolineshloka
@@ -241,7 +241,7 @@
 
 \twolineshloka
 {कामातुरां यौवनस्थां भार्या स्वयमुपस्थिताम्}
-{न त्यजेद्धर्मभीतश्च श्रुतं माध्यंदिने पुरा}% ॥४५॥
+{न त्यजेद्धर्मभीतश्च श्रुतं माध्यन्दिने पुरा}% ॥४५॥
 
 
 \twolineshloka
@@ -299,7 +299,7 @@
 
 
 \twolineshloka
-{ततो बभ्राम गहनं शैलं च कंदरं नदम्}
+{ततो बभ्राम गहनं शैलं च कन्दरं नदम्}
 {अहर्निशं च शोकार्तो मुनीनामाश्रमं मुने}% ॥५७॥
 
 
@@ -320,7 +320,7 @@
 
 \twolineshloka
 {हनूमते वरं दत्तवा रम्यं रत्नाङ्गुलीयकम्}
-{सीतायै शुभसंदेशं प्राणधारणकारणम्}% ॥६१॥
+{सीतायै शुभसन्देशं प्राणधारणकारणम्}% ॥६१॥
 
 
 \twolineshloka
@@ -330,7 +330,7 @@
 
 \twolineshloka
 {हनुमान्पययौ लङ्कां सीतान्वेषणहेतवे}
-{रामादधीतसंदेशो ययौ रुद्रकलोद्भवः}% ॥६३॥
+{रामादधीतसन्देशो ययौ रुद्रकलोद्भवः}% ॥६३॥
 
 
 \twolineshloka
@@ -340,7 +340,7 @@
 
 \twolineshloka
 {सततं राम रामेति जपन्तीं भक्तिबूर्वकम्}
-{बिभ्रतीं च जटाभारं तप्तकाञ्चनसंनिभाम्}% ॥६५॥
+{बिभ्रतीं च जटाभारं तप्तकाञ्चनसन्निभाम्}% ॥६५॥
 
 
 \twolineshloka
@@ -360,12 +360,12 @@
 
 \twolineshloka
 {रुरोद धर्मी तां दृष्ट्वा धृत्वा तच्चरणाम्बुजम्}
-{उवाच रामसंदेशं सीताजीवनरक्षणम्}% ॥६९॥
+{उवाच रामसन्देशं सीताजीवनरक्षणम्}% ॥६९॥
 
 \uvacha{हनुमानुवाच}
 
 \twolineshloka
-{पारेसमुद्रं श्रीरामः संनद्धश्च सलक्ष्मणः}
+{पारेसमुद्रं श्रीरामः सन्नद्धश्च सलक्ष्मणः}
 {बभूव राममित्रं च सुग्रीवो बलवान्कपिः}% ॥७०॥
 
 
@@ -400,12 +400,12 @@
 
 
 \twolineshloka
-{पिपीलिकासंघमिव ससैन्यं रावणं तथा}
+{पिपीलिकासङ्घमिव ससैन्यं रावणं तथा}
 {संहर्तुं च समर्थोंऽहं मुहूर्तार्धेन लीलया}% ॥७७॥
 
 
 \twolineshloka
-{रामप्रतिज्ञारक्षार्थं न हनिष्यामि सांप्रतम्}
+{रामप्रतिज्ञारक्षार्थं न हनिष्यामि साम्प्रतम्}
 {स्वस्था भव महाभागे त्यज भीतिं मदीश्वरि}% ॥७८॥
 
 
@@ -430,12 +430,12 @@
 
 
 \twolineshloka
-{अपि सत्यं क संनद्धो न शोकेन हतः प्रभुः}
+{अपि सत्यं क सन्नद्धो न शोकेन हतः प्रभुः}
 {अपि स्मरति मां पापां स्वामिनो दुःखरूपिणीम्}% ॥८३॥
 
 
 \twolineshloka
-{मदर्थे कति दुःखं वा संप्राप स मदीश्वरः}
+{मदर्थे कति दुःखं वा सम्प्राप स मदीश्वरः}
 {हारो नाऽऽरोर्पितः कण्ठे पुरा व्यवहितो रतौ}% ॥८४॥
 
 
@@ -460,7 +460,7 @@
 
 
 \threelineshloka
-{अपि सत्यं ससंन्नद्धो सत्प्रभोरनुजः सदा} 
+{अपि सत्यं ससन्न्नद्धो सत्प्रभोरनुजः सदा} 
 {अपि द्रक्ष्यामि सत्यं तं लक्ष्मणं धर्मलक्षणम्}
 {प्राणानामधिकं प्रेम्णा धन्यं पुण्यस्वरूपिणम्}% ॥८९॥
 
@@ -487,7 +487,7 @@
 
 \twolineshloka
 {निबध्य सेतुं लङ्कां च प्रययौ रघुनन्दनः}
-{ससैन्यः सानुजः शीघ्रं संनद्धश्चापि नारद}% ॥९४॥
+{ससैन्यः सानुजः शीघ्रं सन्नद्धश्चापि नारद}% ॥९४॥
 
 
 \twolineshloka
