--- a/mulam/brahmavaivarta-puranam/vedavati-katha.tex
+++ b/mulam/brahmavaivarta-puranam/vedavati-katha.tex
@@ -15,7 +15,7 @@
 
 \twolineshloka
 {लक्ष्मीं तौ च समाराध्य चोग्रेण तपसा मुने}
-{प्रत्येकं वरमिष्टं च संप्रापतुरभीप्सितम्}% ।। १ ।।
+{प्रत्येकं वरमिष्टं च सम्प्रापतुरभीप्सितम्}% ।। १ ।।
 
 \twolineshloka
 {महालक्ष्म्या वरेणैव तौ पृध्वीशौ बभूवतुः}
@@ -75,7 +75,7 @@
 
 \twolineshloka
 {सा सती कोपदृष्ट्या च स्तम्भितं तं चकार ह}
-{स जडो हस्तपादैश्च किंचिद्वक्तुं न च क्षमः}% ।। १६ ।।
+{स जडो हस्तपादैश्च किञ्चिद्वक्तुं न च क्षमः}% ।। १६ ।।
 
 \twolineshloka
 {तुष्टाव मनसा देवीं पद्मांशां पद्मलोचनाम्}
@@ -87,11 +87,11 @@
 
 \twolineshloka
 {इत्युक्त्वा सा च योगेन देहत्यागं चकार ह}
-{गंगायां तां च संन्यस्य स्व गृहं रावणो ययौ}% ।। १९ ।।
+{गङ्गायां तां च सन्न्यस्य स्व गृहं रावणो ययौ}% ।। १९ ।।
 
 \twolineshloka
 {अहो किमद्भुतं दृष्टं किं कृतं वा मयाऽधुना}
-{इति संचिन्त्य संस्मृत्य विललाप पुनः पुनः}% ।। ।। 2.14.२० ।।
+{इति सञ्चिन्त्य संस्मृत्य विललाप पुनः पुनः}% ।। ।। 2.14.२० ।।
 
 \twolineshloka
 {सा च कालान्तरे साध्वी बभूव जनकात्मजा}
@@ -102,7 +102,7 @@
 {लेभे रामं च भर्त्तारं परिपूर्णतमं हरिम्}% ।। २२ ।।
 
 \twolineshloka
-{संप्राप्य तपसाऽऽराध्य स्वामिनं च जगत्पतिम्}
+{सम्प्राप्य तपसाऽऽराध्य स्वामिनं च जगत्पतिम्}
 {सा रमा सुचिरं रेमे रामेण सह सुन्दरी}% ।। २३ ।।
 
 \twolineshloka
@@ -127,7 +127,7 @@
 
 \twolineshloka
 {तं रामं दुःखितं दृष्ट्वा स च दुःखी बभूव ह}
-{उवाच किंचित्सत्येष्टं सत्यं सत्यपरायणः}% ।। २९ ।।
+{उवाच किञ्चित्सत्येष्टं सत्यं सत्यपरायणः}% ।। २९ ।।
 वह्निरुवाच ।।
 
 \twolineshloka
@@ -136,7 +136,7 @@
 
 \twolineshloka
 {दैवं च दुर्निवार्य्यं वै न च दैवात्परं बलम्}
-{मत्प्रसू मयि संन्यस्य च्छायां रक्षान्तिकेऽधुना}% ।। ३१ ।।
+{मत्प्रसू मयि सन्न्यस्य च्छायां रक्षान्तिकेऽधुना}% ।। ३१ ।।
 
 \twolineshloka
 {दास्यामि सीतां तुभ्यं च परीक्षासमये पुनः}
@@ -159,7 +159,7 @@
 {सीता तं प्रेरयामास तदर्थे यत्नपूर्वकम्}% ।। ३६ ।।
 
 \twolineshloka
-{संन्यस्य लक्ष्मणं रामो जानक्या रक्षणे वने}
+{सन्न्यस्य लक्ष्मणं रामो जानक्या रक्षणे वने}
 {स्वयं जगाम हन्तुं तं विव्यधे सायकेन च}% ।। ३७ ।।
 
 \twolineshloka
@@ -195,7 +195,7 @@
 {पुनर्बभ्राम गहने तदन्वेषणपूर्वकम्}% ।। ४५ ।।
 
 \twolineshloka
-{काले संप्राप्य तद्वार्तां गृधद्वारा नदीतटे}
+{काले सम्प्राप्य तद्वार्तां गृधद्वारा नदीतटे}
 {सहायं वानरं कृत्वा चाबध्नात्सागरं हरिः}% ।। ।। ४६ ।।
 
 \twolineshloka
@@ -240,7 +240,7 @@
 \uvacha{नारायण उवाच}
 
 \twolineshloka
-{लङ्कायां वस्तुतः सीता रामं संप्राप नारद}
+{लङ्कायां वस्तुतः सीता रामं सम्प्राप नारद}
 {रूपयौवनसम्पन्ना छाया सा बहुविह्वला}% ।। ५६ ।।
 
 \twolineshloka
@@ -260,7 +260,7 @@
 {इत्येवं कथितं सर्वं प्रस्तुतं वस्तुतः शृणु}% ।। 2.14.६० ।।
 
 \twolineshloka
-{अथ संप्राप्य लङ्कायां सीतां रामो मनोहराम्}
+{अथ सम्प्राप्य लङ्कायां सीतां रामो मनोहराम्}
 {विभीषणाय तां लङ्कां दत्त्वाऽयोध्यां ययौ पुनः}% ।। ६१ ।।
 
 \twolineshloka
@@ -276,7 +276,7 @@
 {सन्ति यस्याश्च जिह्वाग्रे सा च वेदवती स्मृता}% ।। ६४ ।।
 
 \twolineshloka
-{कुशध्वजसुताख्यानमुक्तं संक्षेपतस्तव}
+{कुशध्वजसुताख्यानमुक्तं सङ्क्षेपतस्तव}
 {धर्मध्वजसुताख्यानं निबोध कथयामि ते}% ।। ६५ ।।
 
 ॥इति श्रीब्रह्मवैवर्त्ते महापुराणे द्वितीये प्रकृतिखण्डे नारदनारायणसंवादे तुलस्युपाख्याने वेदवतीप्रस्तावे चतुर्दशोऽध्यायः॥१४॥
