--- a/mulam/harivamsha/ramakatha.tex
+++ b/mulam/harivamsha/ramakatha.tex
@@ -81,7 +81,7 @@
 
 \twolineshloka
 {जघान सचिवैः सार्द्धं ससैन्यं रावणं युधि}
-{महाभ्रघनसंकाशं महाकायं महाबलम्}%।। १३७।।
+{महाभ्रघनसङ्काशं महाकायं महाबलम्}%।। १३७।।
 
 \twolineshloka
 {तमागस्कारिणं घोरं पौलस्त्यं युधि दुर्जयम्}
@@ -114,7 +114,7 @@
 
 \threelineshloka
 {ब्रह्म पर्यचरत् क्षत्र विशः क्षत्रमनुव्रताः}
-{शूद्राश्चैव हि वर्णांस्त्रीञ्छुश्रूषन्त्यनहंकृताः}
+{शूद्राश्चैव हि वर्णांस्त्रीञ्छुश्रूषन्त्यनहङ्कृताः}
 {नार्यो नात्यचरन्भर्तॄन् भार्यां नात्यचरत् पतिः}%।। १४५।।
 
 \twolineshloka
