--- a/mulam/naradiya-puranam/hanumaccharitram.tex
+++ b/mulam/naradiya-puranam/hanumaccharitram.tex
@@ -67,7 +67,7 @@
 {पुत्रो मे भरतो नाम यौवराज्येऽभिषिच्यताम्}% १६
 
 \twolineshloka
-{रामश्चतुर्दशसमा दंडकान्प्रविवास्यताम्}
+{रामश्चतुर्दशसमा दण्डकान्प्रविवास्यताम्}
 {तदाकर्ण्याहमुद्युक्तोऽरण्यं भार्यानुजान्वितः}% १७
 
 \twolineshloka
@@ -123,7 +123,7 @@
 {सम्भोजितास्तु प्रययुः स्वस्वमाश्रममण्डलम्}% ३०
 
 \twolineshloka
-{ततः कालांतरे विप्रा देवा दैत्या नरेश्वराः}
+{ततः कालान्तरे विप्रा देवा दैत्या नरेश्वराः}
 {गौतमेन समाहूताः सर्वे यज्ञसभाजिताः}% ३१
 
 \twolineshloka
@@ -277,7 +277,7 @@
 
 \twolineshloka
 {तच्छ्रुत्वा ह्यसुराचार्यः शुक्रः प्राह विदांवरः}
-{एनं संजीवयिष्यामि भार्गवं शङ्करप्रियम्}% ६९
+{एनं सञ्जीवयिष्यामि भार्गवं शङ्करप्रियम्}% ६९
 
 \twolineshloka
 {किमर्थं म्रियते ब्रह्मन्पश्य मे तपसो बलम्}
@@ -324,7 +324,7 @@
 {शिवानुमत्या ब्रह्मापि हंसारूढोऽभवत्तदा}% ८०
 
 \twolineshloka
-{इंद्र गोपप्रभाकारच्छत्राभ्यां शुशुभे विधिः}
+{इन्द्र गोपप्रभाकारच्छत्राभ्यां शुशुभे विधिः}
 {इन्द्रा दिसर्वदेवाश्च स्वस्ववाहनसंयुताः}% ८१
 
 \twolineshloka
@@ -392,7 +392,7 @@
 {क्षामोदरोऽसि गोविन्द देयं ते भोजनं किमु}% ९७
 
 \twolineshloka
-{स्वयं प्रविश्य यदि वा स्वयं भुंक्ष्व स्वगेहवत्}
+{स्वयं प्रविश्य यदि वा स्वयं भुङ्क्ष्व स्वगेहवत्}
 {गच्छ वा पार्वतीगेहं या कुक्षिं पूरयिष्यति}% ९८
 
 \twolineshloka
@@ -404,7 +404,7 @@
 {सम्पादयान्नं देवेशा भोक्तुकामा वयं मुने}% १००
 
 \twolineshloka
-{इत्युक्त्वैकान्तमगमद्वासुदेवेन शंकरः}
+{इत्युक्त्वैकान्तमगमद्वासुदेवेन शङ्करः}
 {मृदुशय्यां समारुह्य शयितौ देवतोत्तमौ}% १०१
 
 \twolineshloka
@@ -425,7 +425,7 @@
 
 \twolineshloka
 {अत्रान्तरे हरेः स्कन्धमारुरोह महेश्वरः}
-{हर्युत्तमाङ्गं बाहुभ्यां गृहीत्वा संन्यमज्जयत्}% १०६
+{हर्युत्तमाङ्गं बाहुभ्यां गृहीत्वा सन्न्यमज्जयत्}% १०६
 
 \twolineshloka
 {उन्मज्जयित्वा च पुनः पुनश्चापि पुनः पुनः}
@@ -437,7 +437,7 @@
 
 \twolineshloka
 {अथोत्थितो हरिस्तोयमादायाञ्जलिना ततः}
-{शीर्षे चैवाकिरच्छम्भुमथ शंभुरथो हरेः}% १०९
+{शीर्षे चैवाकिरच्छम्भुमथ शम्भुरथो हरेः}% १०९
 
 \twolineshloka
 {जलक्रीडैवमभवदथ चर्षिगणान्तरे}
@@ -517,7 +517,7 @@
 {पूजिता गौतमेनाथ भोजनावसरे सति}% १२८
 
 \twolineshloka
-{यच्छुष्कं दारुसंभूतं गृहोपकरणादिकम्}
+{यच्छुष्कं दारुसम्भूतं गृहोपकरणादिकम्}
 
 \twolineshloka
 {प्ररूढमभवत्सर्वं गायमाने हनूमति}% १२९}
@@ -528,7 +528,7 @@
 {प्रसन्नमूर्तिस्तरुणः सुमध्ये विन्यस्तमूर्द्धाञ्जलिभिः शिरोभिः}% १३१
 
 \twolineshloka
-{शिरः कराभ्यां परिगृह्य शंकरो हनुमतं पूर्वमुखं चकार}
+{शिरः कराभ्यां परिगृह्य शङ्करो हनुमतं पूर्वमुखं चकार}
 {पद्मासनासीनहनूमतोऽञ्जलौ निधाय पादं त्वपरं मुखे च}% १३२
 
 \twolineshloka
@@ -540,7 +540,7 @@
 {शिरो गृहीत्वाऽवनमय्य शङ्करः पस्पर्श पृष्ठं चिबुकेन सोऽध्वनि}% १३४}
 
 \onelineshloka
-{हारं च मुक्तापरिकल्पितं शिवो हनूमतः कंठगतं चकार}% १३५
+{हारं च मुक्तापरिकल्पितं शिवो हनूमतः कण्ठगतं चकार}% १३५
 
 \twolineshloka
 {अथ विष्णुर्महेशानमिदं वचनमुक्तवान्}
@@ -588,7 +588,7 @@
 
 \twolineshloka
 {अथो विभूषितः शिवो निविष्ट उत्तमासने}
-{स्वसंमुखं हरिं तथा न्यवेशयद्वरासने}% १४७
+{स्वसम्मुखं हरिं तथा न्यवेशयद्वरासने}% १४७
 
 \twolineshloka
 {देव श्रेष्ठौ हरीशौ तावन्योन्याभिमुखस्थितौ}
@@ -643,7 +643,7 @@
 {भुक्तिवेलेयमधुना तद्वैरस्यं कथान्तरात्}% १६०
 
 \twolineshloka
-{भुक्त्वा तु कथयिष्यामि निर्विशङ्कं विभुंक्ष्व तत्}
+{भुक्त्वा तु कथयिष्यामि निर्विशङ्कं विभुङ्क्ष्व तत्}
 {अथासौ जलसंस्कारं कृतवान् गौतमो मुनिः}% १६१
 
 \twolineshloka
@@ -651,7 +651,7 @@
 {तडागतोयैः कतबीजघर्षितैर्विशौधितैस्तैः करकानपूरयत्}% १६२
 
 \fourlineindentedshloka*
-{नद्याः सैकतवेदिकां नवतरां संछाद्य सूक्ष्माम्बरैः}
+{नद्याः सैकतवेदिकां नवतरां सञ्छाद्य सूक्ष्माम्बरैः}
 {शुद्धैः श्वेततरैरथोपरि घटांस्तोयेन पूर्णान्क्षिपेत्}
 {लिप्त्वा नालकजातिमास्तपुटकं तत्कौलकं कारिका}
 {चूर्णं चन्दनचन्द्र रश्मिविशदां मालां पुटान्तं क्षिपेत्}
@@ -716,7 +716,7 @@
 
 \twolineshloka
 {गृहाण देव ताम्बूलमित्युक्तवचने मुनौ}
-{कपे गृहाण तांबूलं प्रयच्छ मम खण्डकान्}% १७७
+{कपे गृहाण ताम्बूलं प्रयच्छ मम खण्डकान्}% १७७
 
 \twolineshloka
 {उवाच वानरो नास्ति मम शुद्धिर्महेश्वर}
@@ -775,7 +775,7 @@
 {भोजयामास गिरिजां देवीं चारुन्धतीं तथा}% १९१
 
 \twolineshloka
-{भुक्त्वाथ पार्वती सर्वगन्धपुष्पाद्यलंकृता}
+{भुक्त्वाथ पार्वती सर्वगन्धपुष्पाद्यलङ्कृता}
 {सहानुचरकन्याभिः सहस्राभिर्हरं ययौ}% १९२
 
 \twolineshloka
@@ -787,7 +787,7 @@
 {सन्ध्यावन्दनकामास्तु सर्व एव विनिर्गताः}% १९४
 
 \twolineshloka
-{कृतसंध्यास्तडागे तु महेशाद्याश्च कृत्स्नशः}
+{कृतसन्ध्यास्तडागे तु महेशाद्याश्च कृत्स्नशः}
 {अथोत्तरमुखः शम्भुर्न्यास कृत्वा जजाप ह}% १९५
 
 \twolineshloka
@@ -883,7 +883,7 @@
 {पूर्वमेव मया सर्वं ज्ञातप्रायमभूत्किल}% २१८
 
 \twolineshloka
-{सर्वद्र विणसंपत्तिर्भूषणैरवगम्यते}
+{सर्वद्र विणसम्पत्तिर्भूषणैरवगम्यते}
 {शिरो विभूषितं देव ब्रह्मशीर्षस्य मालया}% २१९
 
 \twolineshloka
@@ -912,7 +912,7 @@
 
 \twolineshloka
 {ममाप्रियं हृषीकेश कर्तुं यत्किञ्चिदिष्यते}
-{ओमित्युक्त्वाथ भगवांस्तूष्णींभूतोऽभवद्धरिः}% २२६
+{ओमित्युक्त्वाथ भगवांस्तूष्णीम्भूतोऽभवद्धरिः}% २२६
 
 \twolineshloka
 {हनुमानथ देवाय व्यज्ञापयदिदं वचः}
@@ -947,7 +947,7 @@
 {सुभृङ्गराजधत्तूरद्रो णपुष्पप्रियस्य ते}% २३४
 
 \twolineshloka
-{बृहतीपूगपुन्नागचंपकादिप्रियाय च}
+{बृहतीपूगपुन्नागचम्पकादिप्रियाय च}
 {नमस्तेऽस्तु नमस्तेऽस्तु भूय एव नमो नमः}% २३५
 
 \twolineshloka
@@ -1040,7 +1040,7 @@
 
 \twolineshloka
 {रक्तशालिजपाशाणकलमासितरक्तकैः}
-{तंदुलैर्वीहिमात्रोत्थैः कणैश्चैव यथाक्रमम्}% २५८
+{तन्दुलैर्वीहिमात्रोत्थैः कणैश्चैव यथाक्रमम्}% २५८
 
 \twolineshloka
 {उत्तमैर्मध्यमैश्चैव कनिष्ठैरधमैस्तथा}
@@ -1052,7 +1052,7 @@
 
 \twolineshloka
 {कौशं चार्मं चैलतल्पे दारवं तालपत्रकम्}
-{कांबलं काञ्चनं चैव राजतं ताम्रमेव च}% २६१
+{काम्बलं काञ्चनं चैव राजतं ताम्रमेव च}% २६१
 
 \twolineshloka
 {गोकरीषार्कजैर्वापि ह्यासनं परिकल्पयेत्}
@@ -1060,7 +1060,7 @@
 
 \twolineshloka
 {चार्मं चतुर्विधं ज्ञेयमथ बन्धुकमेव च}
-{यथासंभवमेतेषु ह्यासनं परिकल्पयेत्}% २६३
+{यथासम्भवमेतेषु ह्यासनं परिकल्पयेत्}% २६३
 
 \twolineshloka
 {कृतपद्मासनो वापि स्वस्तिकासन एव च}
@@ -1079,7 +1079,7 @@
 {तया दीप्त्या शरीरस्थं पापं नाशमुपागतम्}% २६७
 
 \twolineshloka
-{स्वर्णपादैरसंपर्काद्र क्तं श्वेतं यथा भवेत्}
+{स्वर्णपादैरसम्पर्काद्र क्तं श्वेतं यथा भवेत्}
 {तद्द्वादशदलावृत्तमष्ट पञ्च त्रिरेव वा}% २६८
 
 \twolineshloka
@@ -1135,7 +1135,7 @@
 {कृशानुयुक्तं स्नानं तु देवाय परिकल्पयेत्}% २८१
 
 \twolineshloka
-{एवं गवयशृंगस्य जलपूर्तिरथोच्यते}
+{एवं गवयशृङ्गस्य जलपूर्तिरथोच्यते}
 {द्वारे निषिद्धलोहार्द्धसन्धिद्वारासमन्विते}% २८२
 
 \twolineshloka
@@ -1188,7 +1188,7 @@
 {गीतिर्वाद्यं पुराणं च नृत्यं हासोक्तिरेव च}% २९३
 
 \twolineshloka
-{नीराजनं च पुष्पाणामंजलिश्चाखिलार्पणम्}
+{नीराजनं च पुष्पाणामञ्जलिश्चाखिलार्पणम्}
 {क्षमापनं चोद्वसनं प्रोक्तं पञ्चोपचारकम्}% २९४
 
 \twolineshloka
@@ -1200,11 +1200,11 @@
 {एकेनाह्ना समस्तानां पातकानां क्षयो भवेत्}% २९६
 
 \twolineshloka
-{एतच्छ्रुत्वा हनुमतो वचनं प्राह शंकरः}
+{एतच्छ्रुत्वा हनुमतो वचनं प्राह शङ्करः}
 {एवमेतत्कपिश्रेष्ठः यदुक्तं पूजनं मम}% २९७
 
 \twolineshloka
-{सारभूतमहं तुभ्यमुपदेक्ष्यामि सांप्रतम्}
+{सारभूतमहं तुभ्यमुपदेक्ष्यामि साम्प्रतम्}
 {आराधनं यथा लिङ्गे विस्तरेण त्वयोदितम्}% २९८
 
 \twolineshloka
@@ -1229,7 +1229,7 @@
 
 \twolineshloka
 {अनन्तरं तालपत्रे पद्मासनगतः कपिः}
-{प्राणानायम्य संन्यस्य शुक्लध्यानसमन्वितः}% ३०४
+{प्राणानायम्य सन्न्यस्य शुक्लध्यानसमन्वितः}% ३०४
 
 \twolineshloka
 {प्रणम्य गुरुमीशानं जपन्नासीदतः परम्}
@@ -1277,7 +1277,7 @@
 
 \twolineshloka
 {अथ दृष्ट्वा वीरभद्रो लिङ्गे पीठमनागतम्}
-{दग्धुकामोऽखिलाँ ल्लोकान्वीरभद्र ः! प्रतापवान्}% ३१६
+{दग्धुकामोऽखिलाँल्लोकान्वीरभद्रः प्रतापवान्}% ३१६
 
 \twolineshloka
 {अनलं भुवि चिक्षेप क्षणाद्दग्धा मही तदा}
@@ -1288,7 +1288,7 @@
 {ललाटनेत्रसम्भूतं नखेनादाय चानलम्}% ३१८
 
 \twolineshloka
-{जम्बीरफलसंकाशं कृत्वा करतले विभुः}
+{जम्बीरफलसङ्काशं कृत्वा करतले विभुः}
 {तपः सत्यं च सन्दग्धुमुद्यतोऽभून्मुनीश्वरः}% ३१९
 
 \twolineshloka
@@ -1320,7 +1320,7 @@
 {जगज्जाढ्यविध्वंसनो भुक्तिमुक्तिप्रदः स्तात्प्रसन्नः सदा शुद्धकीर्तिः}% ३२६
 
 \twolineshloka
-{यतः संप्रसूतं जगज्जातमीशात्स्थितं येन रक्षावता भावितं च}
+{यतः सम्प्रसूतं जगज्जातमीशात्स्थितं येन रक्षावता भावितं च}
 {लयं यास्यते यत्र वाचां विदूरे स वै नः प्रसन्नोऽस्तु कालत्रयात्मा}% ३२७
 
 \twolineshloka
@@ -1344,7 +1344,7 @@
 {देव द्वादशलोकानां दृश्यन्ते भस्मराशयः}% ३३२
 
 \twolineshloka
-{स्थितमेकं वनमिदं पश्य तल्लोकसंक्षयम्}
+{स्थितमेकं वनमिदं पश्य तल्लोकसङ्क्षयम्}
 {तच्छ्रुत्वा गिरिशः प्राह तान्मुनीनूर्द्ध्वरेतसः}% ३३३
 
 \twolineshloka
