--- a/mulam/narasimha-puranam/rama-pradurbhava.tex
+++ b/mulam/narasimha-puranam/rama-pradurbhava.tex
@@ -1374,7 +1374,7 @@
 
 \twolineshloka
 {स कुर्वन् भ्रातुरादेशं नन्दिग्रामे स्थितो वशी}
-{तपस्वी नियताहार: शाकमूलफलाशनः} %॥१६६॥
+{तपस्वी नियताहारः शाकमूलफलाशनः} %॥१६६॥
 
 \fourlineindentedshloka
 {जटाकलापं शिरसा च बिभ्रत्}
