--- a/mulam/naradiya-puranam/lakshmanachala-mahatmayam.tex
+++ b/mulam/naradiya-puranam/lakshmanachala-mahatmayam.tex
@@ -10,166 +10,324 @@
 \storymeta
 
 
-मोहिन्युवाच-
-श्रुतं गोकर्णमाहात्म्यं वसो पापविनाशनम्
-लक्ष्मणस्यापि माहात्म्यं वक्तुमर्हसि साम्प्रतम् 2.75.१
-वसुरुवाच-
-शृणु देवि प्रवक्ष्यामि माहात्म्यं लक्ष्मणस्य च
-यं दृष्ट्वा मनुजो देवं मुच्यते सर्वपातकैः २
-चतुर्व्यूहावतारे यो देवः सकर्षणः स्वयय्
-सर्वभूमण्डलं ह्येतत्सहस्रवदनः स्वराट् ३
-एकस्मिञ्छिरसि न्यस्तं नावैत्सिद्धार्थकोपमम्
-देवो नारायणः साक्षाद्रा मो ब्रह्मादिवन्दितः ४
-प्रद्युम्नो भरतो भद्रे शत्रुघ्नो ह्यनिरुद्धकः
-लक्ष्मणस्तु महाभागे स्वयं सङ्कर्षणः शिवः ५
-ब्रह्माद्यैः प्रार्थितः पूर्वं साक्षाद्देवो रमापतिः
-रामादिनामभिर्जज्ञे चतुर्द्धा दिग्ग्रथान्नृपात् ६
-ततः कालान्तरे देवि विश्वामित्रो मुनीश्वरः
-यज्ञरक्षार्थमागत्य प्रार्थयद्रा मलक्ष्मणौ ७
-ततो राजा दशरथः प्राणेभ्योऽपि प्रियौ सुतौ
-मुनेः शापभयाद्भीतो ददौ तौ रामलक्ष्मणौ ८
-गत्वा यज्ञं मुनीन्द्र स्य गाधिपस्य ररक्षतुः
-सताडकं सुबाहुं तु हत्वा प्रक्षिप्य दूरतः ९
-मारीचं मानवास्त्रेण विश्वामित्रमतोषयत्
-ततः प्रीतान्मुनिश्रेष्ठादस्त्रग्राममवाप्य च १०
-उवाच स कियत्कालं सानुजस्तेन सत्कृतः
-वैदेहनगरं नीतो विश्वामित्रेण तत्परम् ११
-ततस्तु राजा जनको विश्वामित्रं सुसत्कृतम्
-पप्रच्छ बालकावेतौ कस्य क्षत्रकुलेशितुः १२
-ततस्तस्मै मुनिवरो राज्ञो दशरथस्य तौ
-पुत्रौ निवेदयामास भ्रातरौ रामलक्ष्मणौ १३
-ततो विदेहः सप्रीतो दृष्ट्वा रामं च लक्ष्मणम्
-सीतोर्मिलाख्ययोः पुत्र्! योश्चेतसाकल्पयत्पती १४
-त्रिकालज्ञस्तु स मुनिर्ज्ञात्वा तस्य मनोगतम्
-मोदमानोऽथ जनकं प्राह दर्शय तद्धनुः १५
-सीतास्वयंवरे न्यस्तं न्यासभूतं महेशितुः
-राजा श्रुत्वा तु तद्वाक्यं विश्वामित्रस्य सत्वरम् १६
-भृत्यत्रिशत्यानाय्यास्मै दर्शयामास सादरम्
-रामश्चण्डीशचापं तद्वामदोष्णोद्धरन् क्षणात् १७
-सज्यं विकृष्य सहसा बभञ्जेक्षुमिवेभराट्
-ततोऽति मिथिलः प्रीतः स्वे कन्ये रामलक्ष्मणौ १८
-समभ्यर्च्यार्पयामास ताभ्यां ते विधिपूर्वकम्
-ज्ञात्वा मुनिवरादन्यौ राज्ञो दशरथस्य तु १९
-ताभ्यां सह तमाहूय भ्रातृकन्ये अदापयत्
-ततः स कृतदारैस्तु चतुर्भिस्तनयैः सह २०
-समर्चितो विदेहेनायोध्यां मुन्याज्ञया ययौ
-मार्गे भृगुपतेर्दर्पं शमयित्वा स राघवः २१
-पितृभ्रातृयुतः श्रीमान्मुमुदे बहुवत्सरान्
-पण्डितैस्तु वसिष्ठाद्यैर्बोधितोऽसौ निजं महः २२
-ब्रह्माख्यं बुबुधे रामो मानुषत्वं विडम्बयन्
-ततो दशरथो राजा ज्ञातज्ञेयं निजं सुतम् २३
-रामं समुद्यतो हृष्टो यौवराज्येऽभिषेचितुम्
-यज्ज्ञात्वा कैकयी देवी राज्ञः प्रेष्ठा कनीयसी २४
-सन्निवार्य हठात्तस्य पुत्रस्य तदरोचत
-ततो रामो मुदे तस्याः पित्राननुमतो ययौ २५
-सभार्यः सः ससौमित्रिश्चित्रकूटं गिरिं शुभे
-कियत्कालमुवासासौ तत्रैव मुनिवेषधृक् २६
-मातामहगृहात्तच्च श्रुत्वाऽयातः पितुर्वधम्
-स विज्ञाय मृतं तातं हा रामेति विराविणम् २७
-धिक्कृत्य कैकयीं यातो रामं स विनिवर्तितुम्
-ततः स्वपादुके दत्वा भरतं विनिवर्त्य च २८
-रामोऽत्रेश्चाप्यगस्त्यस्य सुतीक्ष्णस्याश्रमेष्वगात्
-तेषु द्वादश वर्षाणि गमयित्वा रघूद्वहः २९
-भार्यानुजान्वितः श्रीमांस्ततः पञ्चवटीमगात्
-तत्रावसज्जनस्थाने त्रिशिरःखरदूषणान् ३०
-शूर्पणख्या विकृतया प्रेरितान्स व्यनाशयत्
-ततो रक्षःसहस्रैश्च चतुर्द्दशभिरागतान् ३१
-विचित्रवाजैर्नाराचैर्यमक्षयमनीनयत्
-यच्छ्रुत्वा रक्षसां राजा मारीचं काञ्चनं मृगम् ३२
-दर्शयित्वापवाह्यैतौ सीतां हृत्वा जटायुषम्
-रुन्धानं मार्गमाहत्य लङ्कायां समुपानयत् ३३
-आगत्य तौ हृतां सीतां मार्गमाणौ समन्ततः
-दृष्ट्वा जटायुषं शान्तं दग्ध्वा हत्वा कबन्धकम् ३४
-शबरीमनुकम्प्याथ ऋष्यमूकमुपागतौ
-ततस्तु हनुमद्वाक्यात्स्वसख्युः प्लवगेशितुः ३५
-विद्विषं वालिनं हत्वा सुग्रीवमकरोन्नृपम्
-तदाज्ञप्तास्तु ते कीशाः सर्वतः समुपागताः ३६
-हनुमत्प्रमुखाः सीतां मार्गन्तो दक्षिणोदधिम्
-प्राप्य सम्पातिवचनाल्लङ्कायां निश्चयं गताः ३७
-ततस्तु हनुमानेकः प्राप्य लङ्कां पुरीं कपिः
-समुद्र स्य परे पारेऽपश्यद्रा मप्रियां सतीम् ३८
-दत्त्वा रामाङ्गुलीरत्नं विश्वासमुपपाद्य ताम्
-तयोः कुशलमाश्राव्य लब्ध्वा चूडामणिं ततः ३९
-भङ्क्त्वा चाशोकवनिकां हत्वा चाक्षं ससैन्यकम्
-इन्द्र जिद्बन्धनात्प्राप्य सम्भाष्यापि च रावणम् ४०
-दग्ध्वा लङ्कां पुरीं कृत्स्नां पुनर्दृष्ट्वा तु मैथिलीम्
-लब्धाज्ञोऽणवमुल्लङ्घ्य रामायैनां न्यवेदयत् ४१
-श्रुत्वा रामोऽपि तां सीतां राक्षसस्य निवासगाम्
-सार्द्धं स कपिसैन्येन सम्प्राप्तो मकरालयम् ४२
-सागरानुमतेनासौ सेतुं बद्ध्वा महोदधौ
-अद्रि कूटेः परं तीरं प्राप्य सेनां न्यवेशयत् ४३
-ततोऽसौ रावणो भ्रात्रा बोधितोऽपि कनीयसा
-प्रदानं तत्र मैथिल्यास्तद्भर्त्रे न त्वरोचयत् ४४
-पदा हतस्ततस्तेन रावणेन विभीषणः
-सम्प्राप्तः शरणं रामं रामो लङ्कामुपारुणत् ४५
-ततस्तु मन्त्रिणोऽमात्याः पुत्रा भृत्याः प्रचोदिताः
-युद्धाय ते क्षयं नीतास्ताभ्यां संख्ये कपीश्वरैः ४६
-लक्ष्मणः शक्रजेतारं जघ्निवान्निशितैः शरैः
-रामोऽपि कुम्भश्रवणं रावणं चाप्यजीघनत् ४७
-विभीषणेन तत्कृत्यं कारयित्वा निजां प्रियाम्
-वह्नौ संशोध्य दत्वास्मै रामो रक्षोगणेशताम् ४८
-लङ्कामायुश्च कल्पान्तं ययौ चीर्णव्रतः पुरीम्
-पुष्पकेण विमानेन ससुग्रीवविभीषणः ४९
-नन्दिग्रामस्थभरतं नीत्वायोध्यां समाविशत्
-मातॄः प्रणम्य ताः सर्वा भ्रातरस्ते पुरोधसा ५०
-वसिष्ठेनानुविज्ञाप्य रामं राज्येऽभ्यषेचयन्
-ततो रामोऽपि भगवान्प्रजाः शासन्निवौरसान् ५१
-लोकापवादात्सन्त्रस्तः सीतां तत्याज धर्मवित्
-सा तु सम्प्राप्य वाल्मीकेराश्रमं न्यवसत्सुखम् ५२
-पुत्रौ च सुषुवे तत्र नाम्ना ख्यातौ कुशीलवौ
-वाल्मीकिस्तु तयोः कृत्वा यथा समुदिताः क्रियाः ५३
-रामायणं विरच्यैतावध्यापयदुदारधीः
-तौ गायमानौ सत्रेषु मुनीनां ख्यातिमागतौ ५४
-यज्ञे रामस्य सम्प्राप्तौ वाजिमेधे प्रवर्तिते
-तत्र ताभ्यां तु तद्गीतं स्वचरित्रं प्रसन्नधीः ५५
-मुनिमाकारयामास ससीतं तत्र संसदि
-सा तु रामाय तौ पुत्रौ निवेद्य जगतीजनिः ५६
-जगत्या विवरं भूयो विवेशासीत्तदद्भुतम्
-ततः परं ब्रह्मचर्यं यज्ञमेव त्रयोदश ५७
-सहस्राब्दान्प्रकुवार्णस्तस्थौ भुवि रघूत्तमः
-ततस्तु काले दुर्वासाः सम्प्राप्तो राघवं प्रति ५८
-ब्रह्मणा प्रेषितो भद्रे वैकुण्ठगमनाय च
-स एकान्तगतो रामं प्राह कोऽपीह नाऽव्रजेत् ५९
-आगतो वध्यतां यातु रामस्तत्प्रतिजज्ञिवान्
-स लक्ष्मणं समाहूय प्रोवाच रघुनन्दनः ६०
-द्वारि तिष्ठात्र निर्विष्टो वध्यतां मे प्रयास्यति
-स तथेति प्रतिज्ञाय रामस्याज्ञां समाचरन् ६१
-प्रवेशनं न कस्यापि प्रददौ रामसन्निधौ
-एवमेकान्तगं रामं कालसंविदमास्थितम् ६२
-ज्ञात्वाथ द्वारि दुर्वासा लक्ष्मणं समुपागमत्
-तमागतं तु संप्रेक्ष्य सौमित्रिः प्रणिपत्य च ६३
-मुहूर्तं पालयेत्याह मन्त्रव्यग्रोऽस्ति राघवः
-दुर्वासास्तद्वचः श्रुत्वा कालस्यार्थविधायकः ६४
-क्रुद्धः प्रोवाच सौमित्रिं देहि मेऽन्तप्रवेशनम्
-नो चेत्त्वां भस्मसात्सद्यः करिष्यामि विचारय ६५
-वचो दुर्वाससः श्रुत्वा लक्ष्मणो जातसम्भ्रमः
-मुनेर्भीतो विवेशान्तर्विज्ञापयितुमग्रजम् ६६
-दृष्ट्वा तु लक्ष्मणं काल उत्थाय कृतमन्त्रकः
-प्रतिज्ञां पालयेत्युक्त्वा ययौ रामविसर्ज्जितः ६७
-ततो निष्क्रम्य भगवान् रामो धर्मभृतां वरः
-प्रतोष्य तं मुनिं प्रीतो दुर्वाससमभोजयत् ६८
-भोजयित्वा प्रणम्यैनं विसृज्य प्राह लक्ष्मणम्
-भ्रातर्लक्ष्मण सम्प्राप्तं सङ्कटं धर्मकारणात् ६९
-यत्त्वं मे वध्यतां प्राप्तो दैवं हि बलवत्तरम्
-मया त्यक्तस्ततो वीर यथेच्छं गच्छ साम्प्रतम् ७०
-ततः प्रणम्य तं रामं सत्यधर्मे व्यवस्थितम्
-दक्षिणां दिशमाश्रित्य तपश्चक्रे नगोपरि ७१
-ततो रामोऽपि भगवान्ब्रह्मप्रार्थनया पुनः
-स्वधामाविशदव्यग्रः ससाकेतः सकोशलः ७२
-गोप्रतारे सरय्वां ये रामं सञ्चिन्त्य सम्प्लुताः
-ते रामधाम विविशुर्दिव्याङ्गा योगिदुर्लभम् ७३
-लक्ष्मणस्तु कियत्कालं तपोयोगबलान्वितः
-रामानुगमनेनैव स्वधामाविशदव्ययम् ७४
-सान्निध्यं पर्वते तस्मिन्दत्त्वा सौमित्रिरन्वहम्
-चक्रं निजाधिकारं स ततस्तत्क्षेत्रमुत्तमम् ७५
-ये पश्यन्ति नरा भक्त्या लक्ष्मणं लक्ष्मणाचले
-ते कृतार्था न सन्देहो गच्छन्ति हरिमन्दिरम् ७६
-तत्र दानं प्रशंसन्ति स्वर्णगोभूमिवाजिनाम्
-दत्तं तत्राक्षयं सर्वं हुतं जप्तं कृतं तथा ७७
-बहुना किमिहोक्तेन दर्शनं तस्य दुर्लभम्
-अगस्त्याज्ञान्तरा देवि दृष्टे मुक्तिर्न संशयः ७८
-एतद्रा मचरित्रं तु लक्ष्मणाख्यानंसयुतम्
-श्रावयेद्योऽपि शृणुयात्स्यातां तौ रामवल्लभौ ७९
-इति श्रीबृहन्नारदीयपुराणे बृहदुपाख्याने उत्तरभागे वसुमोहिनीसंवादे
-रामलक्ष्मणचरित्रसहितलक्ष्मणाचलमाहात्म्यं नाम पञ्चसप्ततितमोऽध्यायः७५
-इति लक्ष्मणाचलमाहात्म्यं समाप्तम्
+\uvacha{मोहिन्युवाच}
+
+\twolineshloka
+{श्रुतं गोकर्णमाहात्म्यं वसो पापविनाशनम्}
+{लक्ष्मणस्यापि माहात्म्यं वक्तुमर्हसि साम्प्रतम्}% १
+
+\uvacha{वसुरुवाच}
+
+\twolineshloka
+{शृणु देवि प्रवक्ष्यामि माहात्म्यं लक्ष्मणस्य च}
+{यं दृष्ट्वा मनुजो देवं मुच्यते सर्वपातकैः}% २
+
+\twolineshloka
+{चतुर्व्यूहावतारे यो देवः सकर्षणः स्वयय्}
+{सर्वभूमण्डलं ह्येतत्सहस्रवदनः स्वराट्}% ३
+
+\twolineshloka
+{एकस्मिञ्छिरसि न्यस्तं नावैत्सिद्धार्थकोपमम्}
+{देवो नारायणः साक्षाद्रा मो ब्रह्मादिवन्दितः}% ४
+
+\twolineshloka
+{प्रद्युम्नो भरतो भद्रे शत्रुघ्नो ह्यनिरुद्धकः}
+{लक्ष्मणस्तु महाभागे स्वयं सङ्कर्षणः शिवः}% ५
+
+\twolineshloka
+{ब्रह्माद्यैः प्रार्थितः पूर्वं साक्षाद्देवो रमापतिः}
+{रामादिनामभिर्जज्ञे चतुर्द्धा दिग्ग्रथान्नृपात्}% ६
+
+\twolineshloka
+{ततः कालान्तरे देवि विश्वामित्रो मुनीश्वरः}
+{यज्ञरक्षार्थमागत्य प्रार्थयद्रा मलक्ष्मणौ}% ७
+
+\twolineshloka
+{ततो राजा दशरथः प्राणेभ्योऽपि प्रियौ सुतौ}
+{मुनेः शापभयाद्भीतो ददौ तौ रामलक्ष्मणौ}% ८
+
+\twolineshloka
+{गत्वा यज्ञं मुनीन्द्र स्य गाधिपस्य ररक्षतुः}
+{सताडकं सुबाहुं तु हत्वा प्रक्षिप्य दूरतः}% ९
+
+\twolineshloka
+{मारीचं मानवास्त्रेण विश्वामित्रमतोषयत्}
+{ततः प्रीतान्मुनिश्रेष्ठादस्त्रग्राममवाप्य च}% १०
+
+\twolineshloka
+{उवाच स कियत्कालं सानुजस्तेन सत्कृतः}
+{वैदेहनगरं नीतो विश्वामित्रेण तत्परम्}% ११
+
+\twolineshloka
+{ततस्तु राजा जनको विश्वामित्रं सुसत्कृतम्}
+{पप्रच्छ बालकावेतौ कस्य क्षत्रकुलेशितुः}% १२
+
+\twolineshloka
+{ततस्तस्मै मुनिवरो राज्ञो दशरथस्य तौ}
+{पुत्रौ निवेदयामास भ्रातरौ रामलक्ष्मणौ}% १३
+
+\twolineshloka
+{ततो विदेहः सप्रीतो दृष्ट्वा रामं च लक्ष्मणम्}
+{सीतोर्मिलाख्ययोः पुत्र्! योश्चेतसाकल्पयत्पती}% १४
+
+\twolineshloka
+{त्रिकालज्ञस्तु स मुनिर्ज्ञात्वा तस्य मनोगतम्}
+{मोदमानोऽथ जनकं प्राह दर्शय तद्धनुः}% १५
+
+\twolineshloka
+{सीतास्वयंवरे न्यस्तं न्यासभूतं महेशितुः}
+{राजा श्रुत्वा तु तद्वाक्यं विश्वामित्रस्य सत्वरम्}% १६
+
+\twolineshloka
+{भृत्यत्रिशत्यानाय्यास्मै दर्शयामास सादरम्}
+{रामश्चण्डीशचापं तद्वामदोष्णोद्धरन् क्षणात्}% १७
+
+\twolineshloka
+{सज्यं विकृष्य सहसा बभञ्जेक्षुमिवेभराट्}
+{ततोऽति मिथिलः प्रीतः स्वे कन्ये रामलक्ष्मणौ}% १८
+
+\twolineshloka
+{समभ्यर्च्यार्पयामास ताभ्यां ते विधिपूर्वकम्}
+{ज्ञात्वा मुनिवरादन्यौ राज्ञो दशरथस्य तु}% १९
+
+\twolineshloka
+{ताभ्यां सह तमाहूय भ्रातृकन्ये अदापयत्}
+{ततः स कृतदारैस्तु चतुर्भिस्तनयैः सह}% २०
+
+\twolineshloka
+{समर्चितो विदेहेनायोध्यां मुन्याज्ञया ययौ}
+{मार्गे भृगुपतेर्दर्पं शमयित्वा स राघवः}% २१
+
+\twolineshloka
+{पितृभ्रातृयुतः श्रीमान्मुमुदे बहुवत्सरान्}
+{पण्डितैस्तु वसिष्ठाद्यैर्बोधितोऽसौ निजं महः}% २२
+
+\twolineshloka
+{ब्रह्माख्यं बुबुधे रामो मानुषत्वं विडम्बयन्}
+{ततो दशरथो राजा ज्ञातज्ञेयं निजं सुतम्}% २३
+
+\twolineshloka
+{रामं समुद्यतो हृष्टो यौवराज्येऽभिषेचितुम्}
+{यज्ज्ञात्वा कैकयी देवी राज्ञः प्रेष्ठा कनीयसी}% २४
+
+\twolineshloka
+{सन्निवार्य हठात्तस्य पुत्रस्य तदरोचत}
+{ततो रामो मुदे तस्याः पित्राननुमतो ययौ}% २५
+
+\twolineshloka
+{सभार्यः सः ससौमित्रिश्चित्रकूटं गिरिं शुभे}
+{कियत्कालमुवासासौ तत्रैव मुनिवेषधृक्}% २६
+
+\twolineshloka
+{मातामहगृहात्तच्च श्रुत्वाऽयातः पितुर्वधम्}
+{स विज्ञाय मृतं तातं हा रामेति विराविणम्}% २७
+
+\twolineshloka
+{धिक्कृत्य कैकयीं यातो रामं स विनिवर्तितुम्}
+{ततः स्वपादुके दत्वा भरतं विनिवर्त्य च}% २८
+
+\twolineshloka
+{रामोऽत्रेश्चाप्यगस्त्यस्य सुतीक्ष्णस्याश्रमेष्वगात्}
+{तेषु द्वादश वर्षाणि गमयित्वा रघूद्वहः}% २९
+
+\twolineshloka
+{भार्यानुजान्वितः श्रीमांस्ततः पञ्चवटीमगात्}
+{तत्रावसज्जनस्थाने त्रिशिरःखरदूषणान्}% ३०
+
+\twolineshloka
+{शूर्पणख्या विकृतया प्रेरितान्स व्यनाशयत्}
+{ततो रक्षःसहस्रैश्च चतुर्द्दशभिरागतान्}% ३१
+
+\twolineshloka
+{विचित्रवाजैर्नाराचैर्यमक्षयमनीनयत्}
+{यच्छ्रुत्वा रक्षसां राजा मारीचं काञ्चनं मृगम्}% ३२
+
+\twolineshloka
+{दर्शयित्वापवाह्यैतौ सीतां हृत्वा जटायुषम्}
+{रुन्धानं मार्गमाहत्य लङ्कायां समुपानयत्}% ३३
+
+\twolineshloka
+{आगत्य तौ हृतां सीतां मार्गमाणौ समन्ततः}
+{दृष्ट्वा जटायुषं शान्तं दग्ध्वा हत्वा कबन्धकम्}% ३४
+
+\twolineshloka
+{शबरीमनुकम्प्याथ ऋष्यमूकमुपागतौ}
+{ततस्तु हनुमद्वाक्यात्स्वसख्युः प्लवगेशितुः}% ३५
+
+\twolineshloka
+{विद्विषं वालिनं हत्वा सुग्रीवमकरोन्नृपम्}
+{तदाज्ञप्तास्तु ते कीशाः सर्वतः समुपागताः}% ३६
+
+\twolineshloka
+{हनुमत्प्रमुखाः सीतां मार्गन्तो दक्षिणोदधिम्}
+{प्राप्य सम्पातिवचनाल्लङ्कायां निश्चयं गताः}% ३७
+
+\twolineshloka
+{ततस्तु हनुमानेकः प्राप्य लङ्कां पुरीं कपिः}
+{समुद्र स्य परे पारेऽपश्यद्रा मप्रियां सतीम्}% ३८
+
+\twolineshloka
+{दत्त्वा रामाङ्गुलीरत्नं विश्वासमुपपाद्य ताम्}
+{तयोः कुशलमाश्राव्य लब्ध्वा चूडामणिं ततः}% ३९
+
+\twolineshloka
+{भङ्क्त्वा चाशोकवनिकां हत्वा चाक्षं ससैन्यकम्}
+{इन्द्र जिद्बन्धनात्प्राप्य सम्भाष्यापि च रावणम्}% ४०
+
+\twolineshloka
+{दग्ध्वा लङ्कां पुरीं कृत्स्नां पुनर्दृष्ट्वा तु मैथिलीम्}
+{लब्धाज्ञोऽणवमुल्लङ्घ्य रामायैनां न्यवेदयत्}% ४१
+
+\twolineshloka
+{श्रुत्वा रामोऽपि तां सीतां राक्षसस्य निवासगाम्}
+{सार्द्धं स कपिसैन्येन सम्प्राप्तो मकरालयम्}% ४२
+
+\twolineshloka
+{सागरानुमतेनासौ सेतुं बद्ध्वा महोदधौ}
+{अद्रि कूटेः परं तीरं प्राप्य सेनां न्यवेशयत्}% ४३
+
+\twolineshloka
+{ततोऽसौ रावणो भ्रात्रा बोधितोऽपि कनीयसा}
+{प्रदानं तत्र मैथिल्यास्तद्भर्त्रे न त्वरोचयत्}% ४४
+
+\twolineshloka
+{पदा हतस्ततस्तेन रावणेन विभीषणः}
+{सम्प्राप्तः शरणं रामं रामो लङ्कामुपारुणत्}% ४५
+
+\twolineshloka
+{ततस्तु मन्त्रिणोऽमात्याः पुत्रा भृत्याः प्रचोदिताः}
+{युद्धाय ते क्षयं नीतास्ताभ्यां सङ्ख्ये कपीश्वरैः}% ४६
+
+\twolineshloka
+{लक्ष्मणः शक्रजेतारं जघ्निवान्निशितैः शरैः}
+{रामोऽपि कुम्भश्रवणं रावणं चाप्यजीघनत्}% ४७
+
+\twolineshloka
+{विभीषणेन तत्कृत्यं कारयित्वा निजां प्रियाम्}
+{वह्नौ संशोध्य दत्वास्मै रामो रक्षोगणेशताम्}% ४८
+
+\twolineshloka
+{लङ्कामायुश्च कल्पान्तं ययौ चीर्णव्रतः पुरीम्}
+{पुष्पकेण विमानेन ससुग्रीवविभीषणः}% ४९
+
+\twolineshloka
+{नन्दिग्रामस्थभरतं नीत्वायोध्यां समाविशत्}
+{मातॄः प्रणम्य ताः सर्वा भ्रातरस्ते पुरोधसा}% ५०
+
+\twolineshloka
+{वसिष्ठेनानुविज्ञाप्य रामं राज्येऽभ्यषेचयन्}
+{ततो रामोऽपि भगवान्प्रजाः शासन्निवौरसान्}% ५१
+
+\twolineshloka
+{लोकापवादात्सन्त्रस्तः सीतां तत्याज धर्मवित्}
+{सा तु सम्प्राप्य वाल्मीकेराश्रमं न्यवसत्सुखम्}% ५२
+
+\twolineshloka
+{पुत्रौ च सुषुवे तत्र नाम्ना ख्यातौ कुशीलवौ}
+{वाल्मीकिस्तु तयोः कृत्वा यथा समुदिताः क्रियाः}% ५३
+
+\twolineshloka
+{रामायणं विरच्यैतावध्यापयदुदारधीः}
+{तौ गायमानौ सत्रेषु मुनीनां ख्यातिमागतौ}% ५४
+
+\twolineshloka
+{यज्ञे रामस्य सम्प्राप्तौ वाजिमेधे प्रवर्तिते}
+{तत्र ताभ्यां तु तद्गीतं स्वचरित्रं प्रसन्नधीः}% ५५
+
+\twolineshloka
+{मुनिमाकारयामास ससीतं तत्र संसदि}
+{सा तु रामाय तौ पुत्रौ निवेद्य जगतीजनिः}% ५६
+
+\twolineshloka
+{जगत्या विवरं भूयो विवेशासीत्तदद्भुतम्}
+{ततः परं ब्रह्मचर्यं यज्ञमेव त्रयोदश}% ५७
+
+\twolineshloka
+{सहस्राब्दान्प्रकुवार्णस्तस्थौ भुवि रघूत्तमः}
+{ततस्तु काले दुर्वासाः सम्प्राप्तो राघवं प्रति}% ५८
+
+\twolineshloka
+{ब्रह्मणा प्रेषितो भद्रे वैकुण्ठगमनाय च}
+{स एकान्तगतो रामं प्राह कोऽपीह नाऽव्रजेत्}% ५९
+
+\twolineshloka
+{आगतो वध्यतां यातु रामस्तत्प्रतिजज्ञिवान्}
+{स लक्ष्मणं समाहूय प्रोवाच रघुनन्दनः}% ६०
+
+\twolineshloka
+{द्वारि तिष्ठात्र निर्विष्टो वध्यतां मे प्रयास्यति}
+{स तथेति प्रतिज्ञाय रामस्याज्ञां समाचरन्}% ६१
+
+\twolineshloka
+{प्रवेशनं न कस्यापि प्रददौ रामसन्निधौ}
+{एवमेकान्तगं रामं कालसंविदमास्थितम्}% ६२
+
+\twolineshloka
+{ज्ञात्वाथ द्वारि दुर्वासा लक्ष्मणं समुपागमत्}
+{तमागतं तु सम्प्रेक्ष्य सौमित्रिः प्रणिपत्य च}% ६३
+
+\twolineshloka
+{मुहूर्तं पालयेत्याह मन्त्रव्यग्रोऽस्ति राघवः}
+{दुर्वासास्तद्वचः श्रुत्वा कालस्यार्थविधायकः}% ६४
+
+\twolineshloka
+{क्रुद्धः प्रोवाच सौमित्रिं देहि मेऽन्तप्रवेशनम्}
+{नो चेत्त्वां भस्मसात्सद्यः करिष्यामि विचारय}% ६५
+
+\twolineshloka
+{वचो दुर्वाससः श्रुत्वा लक्ष्मणो जातसम्भ्रमः}
+{मुनेर्भीतो विवेशान्तर्विज्ञापयितुमग्रजम्}% ६६
+
+\twolineshloka
+{दृष्ट्वा तु लक्ष्मणं काल उत्थाय कृतमन्त्रकः}
+{प्रतिज्ञां पालयेत्युक्त्वा ययौ रामविसर्ज्जितः}% ६७
+
+\twolineshloka
+{ततो निष्क्रम्य भगवान् रामो धर्मभृतां वरः}
+{प्रतोष्य तं मुनिं प्रीतो दुर्वाससमभोजयत्}% ६८
+
+\twolineshloka
+{भोजयित्वा प्रणम्यैनं विसृज्य प्राह लक्ष्मणम्}
+{भ्रातर्लक्ष्मण सम्प्राप्तं सङ्कटं धर्मकारणात्}% ६९
+
+\twolineshloka
+{यत्त्वं मे वध्यतां प्राप्तो दैवं हि बलवत्तरम्}
+{मया त्यक्तस्ततो वीर यथेच्छं गच्छ साम्प्रतम्}% ७०
+
+\twolineshloka
+{ततः प्रणम्य तं रामं सत्यधर्मे व्यवस्थितम्}
+{दक्षिणां दिशमाश्रित्य तपश्चक्रे नगोपरि}% ७१
+
+\twolineshloka
+{ततो रामोऽपि भगवान्ब्रह्मप्रार्थनया पुनः}
+{स्वधामाविशदव्यग्रः ससाकेतः सकोशलः}% ७२
+
+\twolineshloka
+{गोप्रतारे सरय्वां ये रामं सञ्चिन्त्य सम्प्लुताः}
+{ते रामधाम विविशुर्दिव्याङ्गा योगिदुर्लभम्}% ७३
+
+\twolineshloka
+{लक्ष्मणस्तु कियत्कालं तपोयोगबलान्वितः}
+{रामानुगमनेनैव स्वधामाविशदव्ययम्}% ७४
+
+\twolineshloka
+{सान्निध्यं पर्वते तस्मिन्दत्त्वा सौमित्रिरन्वहम्}
+{चक्रं निजाधिकारं स ततस्तत्क्षेत्रमुत्तमम्}% ७५
+
+\twolineshloka
+{ये पश्यन्ति नरा भक्त्या लक्ष्मणं लक्ष्मणाचले}
+{ते कृतार्था न सन्देहो गच्छन्ति हरिमन्दिरम्}% ७६
+
+\twolineshloka
+{तत्र दानं प्रशंसन्ति स्वर्णगोभूमिवाजिनाम्}
+{दत्तं तत्राक्षयं सर्वं हुतं जप्तं कृतं तथा}% ७७
+
+\twolineshloka
+{बहुना किमिहोक्तेन दर्शनं तस्य दुर्लभम्}
+{अगस्त्याज्ञान्तरा देवि दृष्टे मुक्तिर्न संशयः}% ७८
+
+\twolineshloka
+{एतद्रा मचरित्रं तु लक्ष्मणाख्यानंसयुतम्}
+{श्रावयेद्योऽपि शृणुयात्स्यातां तौ रामवल्लभौ}% ७९
+
+॥इति श्रीबृहन्नारदीयपुराणे बृहदुपाख्याने उत्तरभागे वसुमोहिनीसंवादे रामलक्ष्मणचरित्रसहितलक्ष्मणाचलमाहात्म्यं नाम पञ्चसप्ततितमोऽध्यायः॥७५॥
