--- a/mulam/skanda-puranam/hatakeshvara-mahatmyam.tex
+++ b/mulam/skanda-puranam/hatakeshvara-mahatmyam.tex
@@ -1,6 +1,6 @@
 \sect{द्व्युत्तरशततमोऽध्यायः --- लक्ष्मणादिप्रासादपञ्चकनिर्माणप्रतिष्ठापनवर्णनम्}
 
-\src{स्कन्दपुराणम्}{खण्डः ६ (नागरखण्डः)}{अध्यायः ०९९}
+\src{स्कन्दपुराणम्}{खण्डः ६ (नागरखण्डः)}{}{अध्यायः ०९९}
 \vakta{}
 \shrota{}
 \tags{}
@@ -11,7 +11,7 @@
 \storymeta
 
 
-
+\dnsub{एकोनशततमोऽध्यायः --- रामेश्वरस्थापनप्रस्तावे श्रीरामं प्रति दुर्वासः समागमनवृत्तान्तवर्णनम्}\resetShloka
 
 \uvacha{ऋषय ऊचुः}
 
@@ -220,7 +220,10 @@
 \twolineshloka
 {लेह्यैश्चोष्यैस्तथा चर्व्यैः खाद्यैरेव पृथग्विधैः}
 {यावदिच्छा मुनेस्तस्य तथान्नैर्विविधैरपि}%॥ ४६ ॥
+
 ॥इति श्रीस्कान्दे महापुराण एकाशीतिसाहस्र्यां संहितायां षष्ठे नागरखण्डे हाटकेश्वरक्षेत्रमाहात्म्ये रामेश्वरस्थापनप्रस्तावे श्रीरामम्प्रति दुर्वासः समागमनवृत्तान्तवर्णनं नामैकोनशततमोऽध्यायः॥९९॥
+
+\dnsub{शततमोऽध्यायः --- श्रीरामेश्वरस्थापन प्रस्तावे लक्ष्मणनिर्वाणोत्तरं श्रीरामस्य सुग्रीवनगरीं प्रति गमनवर्णनम्}\resetShloka
 
 \uvacha{सूत उवाच}
 
@@ -524,7 +527,10 @@
 \twolineshloka
 {प्रधानामात्ययुक्तेन त्वयापि कपिसत्तम}
 {आगन्तव्यं मया सार्धं विभीषणगृहं प्रति}%॥ ७२ ॥
+
 ॥इति श्रीस्कान्दे महापुराण एकाशीतिसाहस्र्यां संहितायां षष्ठे नागरखण्डे हाटकेश्वरक्षेत्रमाहात्म्ये श्रीरामेश्वरस्थापन प्रस्तावे लक्ष्मणनिर्वाणोत्तरं श्रीरामस्य सुग्रीवनगरीं प्रति गमनवर्णनं नाम शततमोऽध्यायः॥१००॥
+
+\dnsub{एकोत्तरशततमोऽध्यायः --- सेतुमध्ये श्रीरामकृतरामेश्वरप्रतिष्ठावर्णनम्}\resetShloka
 
 \uvacha{सूत उवाच}
 
@@ -715,7 +721,10 @@
 \twolineshloka
 {एवं मार्गमगम्यं तं कृत्वा सेतुसमुद्भवम्}
 {वानरै राक्षसैः सार्धं ततः सम्प्रस्थितो गृहम्}%॥ ४४ ॥
+
 ॥इति श्रीस्कान्दे महापुराण एकाशीतिसाहस्र्यां संहितायां षष्ठे नागरखण्डे हाटकेश्वरक्षेत्रमाहात्म्ये सेतुमध्ये श्रीरामकृतरामेश्वरप्रतिष्ठावर्णनं नामैकोत्तरशततमोऽध्यायः॥१०१॥
+
+\dnsub{द्व्युत्तरशततमोऽध्यायः --- श्रीरामचन्द्रेण हाटकेश्वरक्षेत्रे लक्ष्मणादिप्रासादपञ्चकनिर्माणप्रतिष्ठापनवर्णनम्}\resetShloka
 
 \uvacha{सूत उवाच}
 
@@ -810,412 +819,5 @@
 \twolineshloka
 {अथाष्टम्यां चतुर्दश्यां यो रामचरितं पठेत्}
 {तदग्रे वाजिमेधस्य स कृत्स्नं लभते फलम्}%॥ २२ ॥
+
 ॥इति श्रीस्कान्दे महापुराण एकाशीतिसाहस्र्यां संहितायां षष्ठे नागरखण्डे हाटकेश्वरक्षेत्रमाहात्म्ये श्रीरामचन्द्रेण हाटकेश्वरक्षेत्रे लक्ष्मणादिप्रासादपञ्चकनिर्माणप्रतिष्ठापनवर्णनं नाम द्व्युत्तरशततमोऽध्यायः॥१०२॥
-
-===
-
-\sect{एकादशोत्तरशततमोऽध्यायः --- रामेश्वरक्षेत्रमाहात्म्यवर्णनम्}
-
-\src{स्कन्दपुराणम्}{खण्डः ७ (प्रभासखण्डः)}{प्रभासक्षेत्र माहात्म्यम्}{अध्यायः १११}
-\vakta{}
-\shrota{}
-\tags{}
-\notes{}
-\textlink{https://sa.wikisource.org/wiki/स्कन्दपुराणम्/खण्डः_७_(प्रभासखण्डः)/प्रभासक्षेत्र_माहात्म्यम्/अध्यायः_१११}
-\translink{https://www.wisdomlib.org/hinduism/book/the-skanda-purana/d/doc626899.html}
-
-\storymeta
-
-
-
-
-\uvacha{ईश्वर उवाच}
-
-\twolineshloka
-{ततो गच्छेन्महादेवि पुष्करारण्यमुत्तमम्}
-{तस्मादीशानकोणस्थं धनुषां षष्टिभिः स्थितम्}%॥ १ ॥
-
-\twolineshloka
-{तत्र कुण्डं महादेवि ह्यष्टपुष्करसंज्ञितम्}
-{सर्व पापहरं देवि दुष्प्राप्यमकृतात्मभिः}%॥ २ ॥
-
-\twolineshloka
-{तत्र कुण्डसमीपे तु पुरा रामेशधीमता}
-{स्थापितं तन्महालिङ्गं रामेश्वर इति स्मृतम्}%॥ ३
-
-\onelineshloka
-{तस्य पूजनमात्रेण मुच्यते ब्रह्महत्यया}%॥ ४ ॥
-
-\uvacha{श्रीदेव्युवाच}
-
-\twolineshloka
-{भगवन्विस्तराद्ब्रूहि रामेश्वरसमुद्भवम्}
-{कथं तत्रागमद्रामः ससीतश्च सलक्ष्मणः}%॥ ५ ॥
-
-\twolineshloka
-{कथं प्रतिष्ठितं लिङ्गं पुष्करे पापतस्करे}
-{एतद्विस्तरतो ब्रूहि फलं माहात्म्यसंयुतम्}%॥ ६ ॥
-
-\uvacha{ईश्वर उवाच}
-
-\twolineshloka
-{चतुर्विंशयुगे रामो वसिष्ठेन पुरोधसा}
-{पुरा रावणनाशार्थं जज्ञे दशरथात्मजः}%॥ ७ ॥
-
-\twolineshloka
-{ततः कालान्तरे देवि ऋषिशापान्महातपाः}
-{ययौ दाशरथी रामः ससीतः सहलक्ष्मणः}%॥ ८ ॥
-
-\twolineshloka
-{वनवासाय निष्क्रान्तो दिव्यैर्ब्रह्मर्षिभिर्वृतः}
-{ततो यात्राप्रसङ्गेन प्रभासं क्षेत्रमागतः}%॥ ९ ॥
-
-\twolineshloka
-{तं देशं तु समासाद्य सुश्रान्तो निषसाद ह}
-{अस्तं गते ततः सूर्ये पर्णान्यास्तीर्य भूतले}%॥ १० ॥
-
-\twolineshloka
-{सुष्वापाथ निशाशेषे ददृशे पितरं स्वकम्}
-{स्वप्ने दशरथं देवि सौम्यरूपं महाप्रभम्}%॥ ११ ॥
-
-\twolineshloka
-{प्रातरुत्थाय तत्सर्वं ब्राह्मणेभ्यो न्यवेदयत्}
-{यथा दशरथः स्वप्ने दृष्टस्तेन महात्मना}%॥ १२ ॥
-
-\uvacha{ब्राह्मणा ऊचुः}
-
-\twolineshloka
-{वृद्धिकामाश्च पितरो वरदास्तव राघव}
-{दर्शनं हि प्रयच्छन्ति स्वप्नान्ते हि स्ववंशजे}%॥ १३ ॥
-
-\twolineshloka
-{एतत्तीर्थं महापुण्यं सुगुप्तं शार्ङ्गधन्वनः}
-{पुष्करेति समाख्यातं श्राद्धमत्र प्रदीयताम्}%॥ १४ ॥
-
-\twolineshloka
-{नूनं दशरथो राजा तीर्थे चास्मिन्समीहते}
-{त्वया दत्तं शुभं पिण्डं ततः स दर्शनं गतः}%॥ १५ ॥
-
-\uvacha{ईश्वर उवाच}
-
-\twolineshloka
-{तेषां तद्वचनं श्रुत्वा रामो राजीवलोचनः}
-{निमन्त्रयामास तदा श्राद्धार्हान्ब्राह्मणाञ्छुभान्}%॥ १६ ॥
-
-\twolineshloka
-{अब्रवील्लक्ष्मणं पार्श्वे स्थितं विनतकन्धरम्}
-{फलार्थं व्रज सौमित्रे श्राद्धार्थं त्वरयाऽन्वितः}%॥ १७ ॥
-
-\twolineshloka
-{स तथेति प्रतिज्ञाय जगाम रघुनन्दनः}
-{आनयामास शीघ्रं स फलानि विविधानि च}%॥ १८ ॥
-
-\twolineshloka
-{बिल्वानि च कपित्थानि तिन्दुकानि च भूरिशः}
-{बदराणि करीराणि करमर्दानि च प्रिये}%॥ १९ ॥
-
-\twolineshloka
-{चिर्भटानि परूषाणि मातुलिङ्गानि वै तथा}
-{नालिकेराणि शुभ्राणि इङ्गुदीसम्भवानि च}%॥ २० ॥
-
-\twolineshloka
-{अथैतानि पपाचाशु सीता जनकनन्दिनी}
-{ततस्तु कुतपे काले स्नात्वा वल्कलभृच्छुचिः}%॥ २१ ॥
-
-\twolineshloka
-{ब्राह्मणानानयामास श्राद्धार्हान्द्विजसत्तमान्}
-{गालवो देवलो रैभ्यो यवक्रीतोऽथ पर्वतः}%॥ २२ ॥
-
-\twolineshloka
-{भरद्वाजो वसिष्ठश्च जावालिर्गौतमो भृगुः}
-{एते चान्ये च बहवो ब्राह्मणा वेदपारगाः}%॥ २३ ॥
-
-\twolineshloka
-{श्राद्धार्थं तस्य सम्प्राप्ता रामस्याक्लिष्टकर्मणः}
-{एतस्मिन्नेव काले तु रामः सीतामभाषत}%॥ २४ ॥
-
-\twolineshloka
-{एहि वैदेहि विप्राणां देहि पादावनेजनम्}
-{एतच्छ्रुत्वाऽथ सा सीता प्रविष्टा वृक्षमध्यतः}%॥ २५ ॥
-
-\twolineshloka
-{गुल्मैराच्छाद्य चात्मानं रामस्यादर्शने स्थिता}
-{मुहुर्मुहुर्यदा रामः सीतासीतामभाषत}%॥ २६ ॥
-
-\twolineshloka
-{ज्ञात्वा तां लक्ष्मणो नष्टां कोपाविष्टं च राघवम्}
-{स्वयमेव तदा चक्रे ब्राह्मणार्ह प्रतिक्रियाम्}%॥ २७ ॥
-
-\twolineshloka
-{अथ भुक्तेषु विप्रेषु कृत पिण्डप्रदानके}
-{आगता जानकी सीता यत्र रामो व्यवस्थितः}%॥ २८ ॥
-
-\threelineshloka
-{तां दृष्ट्वा परुषैर्वाक्यैर्भर्त्सयामास राघवः}
-{धिग्धिक्पापे द्विजांस्त्यक्त्वा पितृकृत्यमहोदयम्}
-{क्व गताऽसि च मां हित्वा श्राद्धकाले ह्युपस्थिते}%॥ २९ ॥
-
-\uvacha{ईश्वर उवाच}
-
-\onelineshloka
-{तस्य तद्वचनं श्रुत्वा भयभीता च जानकी}%॥ ३० ॥
-
-\twolineshloka
-{कृताञ्जलिपुटा भूत्वा वेपमाना ह्यभाषत}
-{मा कोपं कुरु कल्याण मा मां निर्भर्त्सय प्रभो}%॥ ३१ ॥
-
-\twolineshloka
-{शृणु यस्माद्विभोऽन्यत्र गता त्यक्त्वा तवान्तिकम्}
-{दृष्टस्तत्र पिता मेऽद्य तथा चैव पितामहः}%॥ ३२ ॥
-
-\twolineshloka
-{तस्य पूर्वतरश्चापि तथा मातामहादयः}
-{अङ्गेषु ब्राह्मणेन्द्राणामाक्रान्तास्ते पृथक्पृथक्}%॥ ३३ ॥
-
-\twolineshloka
-{ततो लज्जा समभवत्तत्र मे रघुनन्दन}
-{पित्रा तत्र महाबाहो मनोज्ञानि शुभानि च}%॥ ३४ ॥
-
-\threelineshloka
-{भक्ष्याणि भक्षितान्येव यानि वै गुणवन्ति च}
-{स कथं सुकषायाणि क्षाराणि कटुकानि च}
-{भक्षयिष्यति राजेन्द्र ततो मे दुःखमाविशत्}%॥ ३६ ॥
-
-\twolineshloka
-{एतस्मात्कारणान्नष्टा लज्जयाऽहं रघूद्वह}
-{दृष्ट्वा श्वशुरवर्गं स्वं तस्मात्कोपं परित्यज}%॥ ३६ ॥
-
-\twolineshloka
-{तस्यास्तद्वचनं श्रुत्वा विस्मितो राघवोऽभवत्}
-{विशेषेण ददौ तस्मिञ्छ्राद्धं तीर्थे तु पुष्करे}%॥ ३७ ॥
-
-\twolineshloka
-{तत्र पुष्करसान्निध्ये दक्षिणे धनुषां त्रये}
-{लिङ्गं प्रतिष्ठयामास रामेश्वरमिति श्रुतम्}%॥ ३५ ॥
-
-\twolineshloka
-{यस्तं पूजयते भक्त्या गन्धपुष्पादिभिः क्रमात्}
-{स प्राप्नोति परं स्थानं य्रत्र देवो जनार्दनः}%॥ ३९ ॥
-
-\twolineshloka
-{किमत्र बहुनोक्तेन द्वादश्यां यत्प्रदापयेत्}
-{न तत्र परिसङ्ख्यानं त्रिषु लोकेषु विद्यते}%॥ ४० ॥
-
-\twolineshloka
-{शुक्राङ्गारकसंयुक्ता चतुर्थी या भवेत्क्वचित्}
-{षष्ठी वात्र वरारोहे तत्र श्राद्धे महत्फलम्}%॥ ४१ ॥
-
-\twolineshloka
-{यावद्द्वादशवर्षाणि पितरश्च पितामहाः}
-{तर्पिता नान्यमिच्छन्ति पुष्करे स्वकुलोद्भवे}%॥ ४२ ॥
-
-\twolineshloka
-{तत्र यो वाजिनं दद्यात्सम्यग्भक्तिसमन्वितः}
-{अश्वमेधस्य यज्ञस्य फलं प्राप्नोति मानवः}%॥ ४३ ॥
-
-\twolineshloka
-{इति ते कथितं सम्यङ्माहात्म्यं पापनाशनम्}
-{रामेश्वरस्य देवस्य पुष्करस्य च भामिनि}%॥ ४४ ॥
-॥इति श्रीस्कान्दे महापुराण एकाशीतिसाहस्र्यां संहितायां सप्तमे प्रभासखण्डे प्रथमे प्रभासक्षेत्रमाहात्म्ये पुष्करमाहात्म्ये रामेश्वरक्षेत्रमाहात्म्यवर्णनं नामैकादशोत्तरशततमोऽध्यायः॥१११॥
-
-===
-
-\sect{द्वादशोत्तरशततमोऽध्यायः --- लक्ष्मणेश्वरमाहात्म्यवर्णनम्}
-
-\src{स्कन्दपुराणम्}{खण्डः ७ (प्रभासखण्डः)}{प्रभासक्षेत्र माहात्म्यम्}{अध्यायः ११२}
-\vakta{}
-\shrota{}
-\tags{}
-\notes{}
-\textlink{https://sa.wikisource.org/wiki/स्कन्दपुराणम्/खण्डः_७_(प्रभासखण्डः)/प्रभासक्षेत्र_माहात्म्यम्/अध्यायः_११२}
-\translink{https://www.wisdomlib.org/hinduism/book/the-skanda-purana/d/doc626900.html}
-
-\storymeta
-
-
-
-
-\uvacha{ईश्वर उवाच}
-
-\twolineshloka
-{ततो गच्छेन्महादेवि लक्ष्मणेश्वरमुत्तमम्}
-{रामेशात्पूर्वदिग्भागे धनुस्त्रिंशकसंस्थितम्}%॥ १ ॥
-
-\twolineshloka
-{स्थापितं लक्ष्मणेनैव तत्र यात्रागतेन वै}
-{महापापहरं देवि तल्लिङ्गं सुरपूजितम्}%॥ २ ॥
-
-\twolineshloka
-{यस्तं पूजयते भक्त्या नृत्यगीतादिवादनैः}
-{होमजाप्यैः समाधिस्थः स याति परमां गतिम्}%॥ ३ ॥
-
-\twolineshloka
-{अन्नोदकं हिरण्यं च तत्र देयं द्विजातये}
-{सम्पूज्य देवदेवेशं गन्धपुष्पादिभिः क्रमात्}%॥ ४ ॥
-
-\twolineshloka
-{माघे कृष्णचतुर्दश्यां विशेषस्तत्र पूजने}
-{स्नानं दानं जपस्तत्र भवेदक्षयकारकम्}%॥ ५ ॥
-॥इति श्रीस्कान्दे महापुराण एकाशीतिसाहस्र्यां संहितायां सप्तमे प्रभासखण्डे प्रथमे प्रभासक्षेत्रमाहात्म्ये रामेश्वरक्षेत्रमाहात्म्ये लक्ष्मणेश्वरमाहात्म्यवर्णनं नाम द्वादशोत्तरशततमोऽध्यायः॥११२॥
-
-===
-
-\sect{त्रयोदशोत्तरशततमोऽध्यायः --- जानकीश्वरमाहात्म्यवर्णनम्}
-
-\src{स्कन्दपुराणम्}{खण्डः ७ (प्रभासखण्डः)}{प्रभासक्षेत्र माहात्म्यम्}{अध्यायः ११३}
-\vakta{}
-\shrota{}
-\tags{}
-\notes{}
-\textlink{https://sa.wikisource.org/wiki/स्कन्दपुराणम्/खण्डः_७_(प्रभासखण्डः)/प्रभासक्षेत्र_माहात्म्यम्/अध्यायः_११३}
-\translink{https://www.wisdomlib.org/hinduism/book/the-skanda-purana/d/doc626901.html}
-
-\storymeta
-
-
-
-
-\uvacha{ईश्वर उवाच}
-
-\twolineshloka
-{ततो गच्छेन्महादेवि जानकीश्वरमुत्तमम्}
-{रामेशान्नैऋते भागे धनुस्त्रिंशकसंस्थितम्}%॥ १ ॥
-
-\twolineshloka
-{पापघ्नं सर्वजन्तूनां जानक्याऽऽराधितं पुरा}
-{प्रतिष्ठितं विशेषेण सम्यगाराध्यशङ्करम्}%॥ २ ॥
-
-\twolineshloka
-{पूर्वं तस्यैव लिङ्गस्य वसिष्ठेशेति नाम वै}
-{तत्पश्चाज्जानकीशेति त्रेतायां प्रथितं क्षितौ}%॥ ३ ॥
-
-\twolineshloka
-{ततः षष्टिसहस्राणि वालखिल्या महर्षयः}
-{तत्र सिद्धिमनुप्राप्तास्तेन सिद्धेश्वरेति च}%॥ ४ ॥
-
-\twolineshloka
-{ख्यातं कलौ महादेवि युगलिङ्गं महाप्रभम्}
-{तद्दृष्ट्वा मुच्यते पापैर्दुःखदौर्भाग्यसम्भवैः}%॥ ५ ॥
-
-\twolineshloka
-{यस्तं पूजयते भक्त्या नारी वा पुरुषोऽपि वा}
-{संस्नाप्य विधिवद्भक्त्या स मुक्तः पातकैर्भवेत्}%॥ ६ ॥
-
-\twolineshloka
-{स्नात्वा च पुष्करे तीर्थे यस्तल्लिगं प्रपूजयेत्}
-{नियतो नियताहारो मासमेकं निरन्तरम्}%॥ ७ ॥
-
-\threelineshloka
-{दिनेदिने भवेत्तस्य वाजिमेधाधिकं फलम्}
-{माघे मासि तृतीयायां या नारी तं प्रपूजयेत्}
-{तदन्वयेऽपि दौर्भाग्यं दुःखं शोकश्च नो भवेत्}%॥ ८ ॥
-
-\twolineshloka
-{इति ते कथितं देवि माहात्म्यं पापनाशनम्}
-{श्रुतं हरति पापानि सौभाग्यं सम्प्रयच्छति}%॥ ९ ॥
-॥इति श्रीस्कान्दे महापुराण एकाशीतिसाहस्र्यां संहितायां सप्तमे प्रभासखण्डे प्रथमे प्रभासक्षेत्रमाहात्म्ये जानकीश्वरमाहात्म्यवर्णनं नाम त्रयोदशोत्तरशततमोऽध्यायः॥११३॥
-
-===
-
-\sect{एकसप्तत्युत्तरशततमोऽध्यायः --- दशरथेश्वरमाहात्म्यवर्णनम्}
-
-\src{स्कन्दपुराणम्}{खण्डः ७ (प्रभासखण्डः)}{प्रभासक्षेत्र माहात्म्यम्}{अध्यायः १७१}
-\vakta{}
-\shrota{}
-\tags{}
-\notes{}
-\textlink{https://sa.wikisource.org/wiki/स्कन्दपुराणम्/खण्डः_७_(प्रभासखण्डः)/प्रभासक्षेत्र_माहात्म्यम्/अध्यायः_१७१}
-\translink{https://www.wisdomlib.org/hinduism/book/the-skanda-purana/d/doc626959.html}
-
-\storymeta
-
-
-
-
-\uvacha{ईश्वर उवाच}
-
-\twolineshloka
-{ततो गच्छेन्महादेवि देवीमेकल्लवीरिकाम्}
-{एकल्लवीरायाम्ये तु नातिदूरे व्यवस्थिताम्}%॥ १ ॥
-
-\twolineshloka
-{पूर्वं दशरथो योऽसौ सूर्यवंशविभूषणः}
-{प्रभासं क्षेत्रमासाद्य तपश्चक्रे सुदुश्चरम्}%॥ २ ॥
-
-\twolineshloka
-{लिङ्गं तत्र प्रतिष्ठाप्य तोषयामास शाङ्करम्}
-{स देवं प्रार्थयामास पुत्रं चैवामितौजसम्}%॥ ३ ॥
-
-\twolineshloka
-{ददौ तस्य तदा पुत्रं देवं त्रैलोक्यपूजितम्}
-{रामेति नाम यस्यासीत्त्रैलोक्ये प्रथितं यशः}%॥ ४ ॥
-
-\twolineshloka
-{यस्याद्यापीह गायन्ति भूर्भुवःस्वर्नि वासिनः}
-{देवदैत्यासुराः सर्वे वाल्मीक्याद्या महर्षयः}%॥ ५ ॥
-
-\threelineshloka
-{तल्लिङ्गस्य प्रभावेन प्राप्तं राज्ञा महद्यशः}
-{कार्तिक्यां कार्तिके मासि विधिना यस्तमर्चयेत्}
-{दीपपूजोपहारेण यशस्वी सोऽपि जायते}%॥ ६ ॥
-॥इति श्रीस्कान्दे महापुराण एकाशीतिसाहस्र्यां संहितायां सप्तमे प्रभासखण्डे प्रथमे प्रभासक्षेत्रमाहात्म्ये दशरथेश्वरमाहात्म्यवर्णनं नामैकसप्तत्युत्तरशततमोऽध्यायः॥१७१॥
-
-===
-
-\sect{अष्टादशोऽध्यायः --- बलिनिग्रहवृत्तान्तवर्णनम्}
-
-\src{स्कन्दपुराणम्}{खण्डः ७ (प्रभासखण्डः)}{वस्त्रापथक्षेत्रमाहात्म्यम्}{अध्यायः १८}
-\vakta{वामनः}
-\shrota{नारदः}
-\tags{}
-\notes{}
-\textlink{https://sa.wikisource.org/wiki/स्कन्दपुराणम्/खण्डः_७_(प्रभासखण्डः)/वस्त्रापथक्षेत्रमाहात्म्यम्/अध्यायः_१८}
-\translink{https://www.wisdomlib.org/hinduism/book/the-skanda-purana/d/doc627173.html}
-
-\storymeta
-
-\twolineshloka
-{लङ्कायां रावणो राज्यं करिष्यति महाबलः}
-{त्रैलोक्यकण्टकं नाम यदासौ धारयिष्यति}%॥ १८१ ॥
-
-\twolineshloka
-{तदा दाशरथी रामः कौसल्यानन्दवर्द्धनः}
-{भविष्ये भ्रातृभिः सार्द्धं गमिष्ये यज्ञमण्डपे}%॥ १८२ ॥
-
-\twolineshloka
-{ताडकां ताडयित्वाहं सुबाहुं यज्ञमन्दिरे}
-{नीत्वा यज्ञाद्गमिष्यामि सीतायास्तु स्वयंवरे}%॥ १८३ ॥
-
-\twolineshloka
-{परिणेष्याभि तां सीतां भङ्क्त्वा माहेश्वरं धनुः}
-{त्यक्त्वा राज्यं गमिष्यामि वने वर्षांश्चतुर्दश}%॥ १८४ ॥
-
-\twolineshloka
-{सीताहरणजं दुःखं प्रथमं मे भविष्यति}
-{नासाकर्णविहीनां तां करिष्ये राक्षसीं वने}%॥ १८५ ॥
-
-\twolineshloka
-{चतुर्द्दशसहस्राणि त्रिशिरःखरदूषणान्}
-{द्हत्वा हनिष्ये मारीचं राक्षसं मृगरूपिणम्}%॥ १८६ ॥
-
-\twolineshloka
-{हृतदारो गमिष्यामि दग्ध्वा गृध्रं जटायुषम्}
-{सुग्रीवेण समं मैत्रीं कृत्वा हत्वाऽथ वालिनम्}%॥ १८७ ॥
-
-\twolineshloka
-{समुद्रं बन्धयिष्यामि नलप्रमुखवानरैः}
-{लङ्कां संवेष्टयिष्यामि मारयिष्यामि राक्षसान्}%॥ १८८ ॥
-
-\twolineshloka
-{कुम्भकर्णं निहत्याजौ मेघनादं ततो रणे}
-{निहत्य रावणं रक्षः पश्यतां सर्वरक्षसाम्}%॥ १८९ ॥
-
-\twolineshloka
-{विभीषणाय दास्यामि लङ्कां देवविनिर्मिताम्}
-{अयोध्यां पुनरागत्य कृत्वा राज्यमकण्टकम्}%॥ १९० ॥
-
-\twolineshloka
-{कालदुर्वाससोश्चित्रचरित्रेणामरावतीम्}
-{यास्येऽहं भ्रातृभिः सार्धं राज्यं पुत्रे निवेद्य च}%॥ १९१ ॥
-
-॥इति श्रीस्कान्दे महापुराण एकाशीतिसाहस्र्यां संहितायां सप्तमे प्रभासखण्डे द्वितीये वस्त्रापथक्षेत्रमाहात्म्ये बलिनिग्रहवृत्तान्तवर्णनं नामाष्टादशोऽध्यायः॥१८॥
