--- a/mulam/adhyatma-ramayanam/HanumatSitaSamvada.tex
+++ b/mulam/adhyatma-ramayanam/HanumatSitaSamvada.tex
@@ -3,7 +3,7 @@
 \src{अध्यात्म-रामायणम्}{सुन्दरकाण्डः}{अध्यायः ३}{श्लोकाः १--३६}
 \vakta{हनुमान्}
 \shrota{सीता}
-\notes{}
+\notes{This is the narration of Rāma's story by Hanumān to Sitā, in Sundara Kāṇḍa of Adhyātma Rāmāyaṇam.}
 \textlink{}
 \translink{}
 
