--- a/mulam/mahabharatam/RamaAvatara.tex
+++ b/mulam/mahabharatam/RamaAvatara.tex
@@ -6,7 +6,7 @@
 \vakta{भीष्मः}
 \shrota{युधिष्ठिरादयः}
 \tags{concise, complete}
-\notes{Bhishma narrates the story of Rama, while recounting the greatness of Vishnu. He goes on to then talk about Krishna, and subsequently, Krishnavatara too.}
+\notes{Bhishma narrates the story of Rāma, while recounting the greatness of Vishnu. He goes on to then talk about Krishna, and subsequently, Krishnavatara too.}
 % \textlink{http://stotrasamhita.net/wiki/Narayaniyam/Dashaka_34}
 \translink{}
 
