--- a/mulam/valmiki-ramayanam/HanumadBharataSambhashanam.tex
+++ b/mulam/valmiki-ramayanam/HanumadBharataSambhashanam.tex
@@ -4,7 +4,7 @@
 \vakta{हनुमान्}
 \shrota{भरतः}
 \tags{concise, complete}
-\notes{Narration of Rama's story, from Bharata's departing Chitrakuta to the retrieval of Sita by conquering Lanka, by Hanuman.}
+\notes{Narration of Rama's story, by Hanuman, from Bharata's departing Chitrakuta to the retrieval of Sita by conquering Lanka.}
 \textlink{}
 \translink{}
 
