--- a/mulam/shloka.sty
+++ b/mulam/shloka.sty
@@ -451,7 +451,7 @@
 
 \newcommand{\dnsub}[1]{
 \medskip
-\centerline{\Large\fontspec[FakeBold=1.0,FakeStretch=1.08,Script=Devanagari,Mapping=tex-text]{Sanskrit 2003} ॥#1॥ }\nopagebreak[4]
+\centerline{\parbox{\linewidth}{\Large\fontspec[FakeBold=1.0,FakeStretch=1.08,Script=Devanagari,Mapping=tex-text]{Sanskrit 2003} ॥#1॥ }}\nopagebreak[4]
 %\centerline{\Large\fontspec[FakeBold=1.0,FakeStretch=1.2,Script=Devanagari,Mapping=tex-text]{Siddhanta} ॥#1॥ }\nopagebreak[4]
 \smallskip
 }
