--- a/mulam/ramayana-ratnakara-mulam.tex
+++ b/mulam/ramayana-ratnakara-mulam.tex
@@ -61,6 +61,9 @@
     \input{brahma-puranam/vishnorpradurbhava}
     \input{brahmavaivarta-puranam/ramacharitam}
     \input{shiva-puranam/rameshvara-mahatmyam}
+    \chapt{स्कन्द-पुराणम्}
+    \input{skanda-puranam/rama-katha-varnanam}
+    \input{skanda-puranam/rama-charitram}
     \input{saura-puranam/ikshvaku-vamsha-nrpa-kathanam}
     \input{vishnu-puranam/vishnu-puranam-ramayanam}
     \input{harivamsha/ramakatha}
@@ -80,6 +83,19 @@
     \input{padma-puranam/rama-ashvamedha-prakaranam}
     \input{vishnudharmottara-puranam/bharata-prasthana}
     \input{shiva-puranam/rama-pariksha}
+    \chapt{स्कन्द-पुराणम्}
+    \input{skanda-puranam/setu-nirmanam}
+    \input{skanda-puranam/ramanatha-linga-pratishtha}
+    \input{skanda-puranam/dharmaranya-jirnoddharanam}
+    \input{skanda-puranam/hanumatkeshvara-mahatmyam}
+    \input{skanda-puranam/hanumanteshvara-mahatmyam}
+    \input{skanda-puranam/hatakeshvara-mahatmyam}
+    \input{skanda-puranam/rameshvara-kshetra-mahatmyam}
+    \input{skanda-puranam/lakshmaneshvara-mahatmyam}
+    \input{skanda-puranam/janakiishvara-mahatmyam}
+    \input{skanda-puranam/dasharatheshvara-mahatmyam}
+    \input{skanda-puranam/vamanena-ramavatara-kathanam}
+
     
     \part{अनुबन्धाः}
     \begingroup
