--- a/mulam/brahma-puranam/rama-tirtha.tex
+++ b/mulam/brahma-puranam/rama-tirtha.tex
@@ -775,7 +775,7 @@
 
 \twolineshloka
 {एवमाद्यथ संस्मृत्य मुमोह नृपतेः सुतः}
-{विसञ्ज्ञं नृपतिं दृष्ट्वा सीता वाक्यमथाब्रवीत्} %॥१५९॥
+{विसंज्ञं नृपतिं दृष्ट्वा सीता वाक्यमथाब्रवीत्} %॥१५९॥
 
 \uvacha{सीतोवाच}
 
