--- a/mulam/naradiya-puranam/hanumaccharitram.tex
+++ b/mulam/naradiya-puranam/hanumaccharitram.tex
@@ -1,4 +1,14 @@
+\chapt{नारदीय-पुराणम्}
+
 \sect{हनुमच्चरित्रम् --- एकोनाशीतितमोऽध्यायः}
+
+\src{नारदीय-पुराणम्}{पूर्वार्धः}{}{एकोनाशीतितमोऽध्यायः}
+\notes{Story of Hanumān.}
+\textlink{https://sa.wikisource.org/wiki/नारदपुराणम्-_पूर्वार्धः/अध्यायः_७९}
+\translink{}
+
+\storymeta
+
 
 \uvacha{सनत्कुमार उवाच}
 
@@ -1260,7 +1270,7 @@
 {यदा तु न समायातो महेशोऽथ कपीश्वरः}% ३११
 
 \twolineshloka
-{रुद्रं न्यपातयद्भूमौ वीरभद्र ः! समागतः}
+{रुद्रं न्यपातयद्भूमौ वीरभद्रः समागतः}
 {किमर्थ रुद्यते भद्र रुदिते कारणं वद}% ३१२
 
 \twolineshloka
@@ -1448,3 +1458,5 @@
 {सुखदं मोक्षदं सारं किमन्यच्छ्रोतुमिच्छसि}% ३५८
 
 ॥इति श्रीबृहन्नारदीयपुराणे पूर्वभागे तृतीयपादे बृहदुपाख्याने तृतीयपादे हनुमच्चरित्रं नाम एकोनाशीतितमोऽध्यायः॥७९॥
+
+\closesection
