--- a/mulam/naradiya-puranam/lakshmanachala-mahatmayam.tex
+++ b/mulam/naradiya-puranam/lakshmanachala-mahatmayam.tex
@@ -1,10 +1,10 @@
 \chapt{नारदीय-पुराणम्}
 \sect{लक्ष्मणाचलमाहात्म्यम् --- पञ्चसप्ततितमोऽध्यायः}
 
-\src{नारदीय-पुराणम्}{}{}{}
+\src{नारदीय-पुराणम्}{उत्तरभागः}{}{पञ्चसप्ततितमोऽध्यायः}
 \tags{concise, complete}
 \notes{}
-\textlink{}
+\textlink{https://sa.wikisource.org/wiki/नारदपुराणम्-_उत्तरार्धः/अध्यायः_७५}
 \translink{}
 
 \storymeta
@@ -327,7 +327,7 @@
 {अगस्त्याज्ञान्तरा देवि दृष्टे मुक्तिर्न संशयः}% ७८
 
 \twolineshloka
-{एतद्रा मचरित्रं तु लक्ष्मणाख्यानंसयुतम्}
+{एतद्रामचरित्रं तु लक्ष्मणाख्यानसंयुतम्}
 {श्रावयेद्योऽपि शृणुयात्स्यातां तौ रामवल्लभौ}% ७९
 
 ॥इति श्रीबृहन्नारदीयपुराणे बृहदुपाख्याने उत्तरभागे वसुमोहिनीसंवादे रामलक्ष्मणचरित्रसहितलक्ष्मणाचलमाहात्म्यं नाम पञ्चसप्ततितमोऽध्यायः॥७५॥
