--- a/mulam/padma-puranam/rama-ashvamedha-prakaranam.tex
+++ b/mulam/padma-puranam/rama-ashvamedha-prakaranam.tex
@@ -6900,7 +6900,7 @@
 {तत्रानेके मया दृष्टा मुनयो धर्मवित्तमाः}% ६१
 
 \twolineshloka
-{असिताङ्गं मुनिमहं गतवाञ्ज्ञातुमिच्छया}
+{असिताङ्गं मुनिमहं गतवांज्ञातुमिच्छया}
 {तदा प्रोवाच मां विप्रः कृपां कृत्वा ममोपरि}% ६२
 
 \twolineshloka
