--- a/mulam/narayaniyam/dashakam-34.tex
+++ b/mulam/narayaniyam/dashakam-34.tex
@@ -2,7 +2,7 @@
 
 \sect{दशकं ३४ --- श्रीरामचरितवर्णनम्}
 
-\src{श्रीमन्नारायणीयम्}{चतुस्त्रिंश-दशकं}{}{श्लोकाः १---10}
+\src{श्रीमन्नारायणीयम्}{चतुस्त्रिंश-दशकं}{}{श्लोकाः १--१०}
 \vakta{शुकः}
 \shrota{परीक्षितः}
 \tags{concise, complete}
